--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.10.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
